--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <main>
         <section>
             <h2>About SAMWEL MBOYA MBOYA</h2>
-            <p>This is a simple webpage designed for SAMWEL MBOYA MBOYA.</p>
+            <p>This is the website for SAMWEL MBOYA MBOYA.</p>
         </section>
         <section>
             <h2>Contact</h2>
