--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
         <section>
             <h2>Contact</h2>
             <form id="contact-form">
-                <label for="name">Name:</label>
+                <label for="email">Name:</label>
                 <input type="text" id="name" name="name" required>
-                <label for="email">Email:</label>
+                <label for="password">Email:</label>
                 <input type="email" id="email" name="email" required>
                 <button type="submit">Submit</button>
             </form>
